Ensure correct sorbet_ruby version as first thing of Init_* (#63)
* Take advantage of sorbet_ruby changes in sorbet_llvm

* Change sorbet_ruby so the symbols are in libruby

* tools/scripts/format_build_files.sh

* tools/scripts/update_exp_files.sh

* fixup error messages

* tools/scripts/update_exp_files.sh

--- a/compiler/IREmitter/Payload/BUILD
+++ b/compiler/IREmitter/Payload/BUILD
@@ -52,13 +52,19 @@ cc_library(
         "-fPIC",
         "-march=x86-64",
     ],
-
     # disable opt flags, as they add `-ffunction-sections` and `-fdata-sections`
     # See https://github.com/bazelbuild/bazel/issues/8706 for why `nocopts` is gone
     features = ["-opt"],
     linkstatic = 1,  # we are doing this only for llvm ir
+    local_defines = [
+        # When this variable is defined, it means we're building the payload for use within sorbet_llvm,
+        # not for the purpose of being included in libruby (though we don't do that yet).
+        # TODO(jez) Link SorbetLLVM's payload into libruby.so.
+        "SORBET_LLVM_PAYLOAD",
+    ],
     visibility = ["//visibility:public"],
     deps = [
+        "@com_stripe_ruby_typer//sorbet_version",
         "@sorbet_ruby//:headers",
         "@sorbet_ruby//:headers-internal",
     ],
