make payload symbols externally available (#66)
* Use sorbet naming convention

* Link payload into ruby vm

* Mark all payload functions as available externally

* One more postprocess

* Restore benchmarks results

* Update exp files

* Try this. Saves a lot of size

* Simplify code

* Update exp files

* Build payload.ll under better flags

* Revert "Build payload.ll under better flags"

This reverts commit 86f913302e7d0544a846ad30dd1a9d48ffe127a4.

* Follow naming convention

* Update exp files

* Mark this constant available_externally

* Update exp files

* Workaround an unknown bug

* update exp files

* Fix strange types

* Format

* Fix the bug.

We used to load constants before they were registered.
Optimizations eliminated them if stack allocation was inlined

* Now this workaround isn't needed

* Update exp files

--- a/compiler/IREmitter/Payload/BUILD
+++ b/compiler/IREmitter/Payload/BUILD
@@ -37,6 +37,15 @@ cc_binary(
     ],
 )
 
+filegroup(
+    name = "vm_payload_srcs",
+    srcs = [
+        "PayloadIntrinsics.c",
+        "payload.c",
+    ],
+    visibility = ["//visibility:public"],
+)
+
 cc_library(
     name = "pseudo_lib",
     srcs = [
